# bwr-tools

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.streamlit  MIGRATION_GUIDE.md  Makefile  README.md  app.py  docker-compose.yml  jest.config.js  next.config.mjs  package-lock.json  package.json  prettier.config.js  pyproject.toml  repomix.config.json  tailwind.config.ts  transfer.md  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
OLD/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-workspace.yaml  tailwind.config.js  tsconfig.base.json  tsconfig.json  turbo.json  vitest.config.ts
OLD/.changeset/: README.md  config.json
OLD/app/: globals.css  layout.tsx  page.tsx
OLD/docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md
OLD/test/: README.md  generate-test-plot.ts  package-lock.json  package.json  run-plot-test.js  setup.ts
OTHER/: artemis_api_wrapper.py  basescan_api_wrapper.py  coingecko_api_wrapper.py  growthepie_api_wrapper.py
backend/: README.md  agent_service.py  main.py  models.py  requirements.txt
docs/: protocol-mapping-enhancement.md
frontend/: Dockerfile  check_bwr_methods.py  next.config.ts  package-lock.json  vercel.json
frontend/utils/: data_processor.py  debug_python.py
scripts/: README.md  build.sh  complete-protocol-mapping.ts  debug-asset-view-tokens.ts  debug-loading-issue.ts  deploy.sh  dev.sh  enhance-protocol-mappings.ts  enhanced-protocol-mapping.ts  install.sh  process-existing-mappings.ts  setup-docker.sh  test-asset-view-error-handling.ts  test-asset-view-final.ts  test-asset-view.ts  test-coingecko-pro-bitcoin.ts  test-enhanced-mappings.ts  test-enhanced-protocol-table.ts  test-loading-progress.ts  test-loading-sequence.ts  test-new-token-mappings.ts  test-pro-api-ping.ts  test-timeout-fixes.ts  test-updated-token-mappings.ts  test-wrapper-with-key.ts  test.sh
src/app/: globals.css  layout.tsx  page.tsx
src/bwr_tools/: __init__.py
src/components/: button.tsx  hero.tsx  (+1 more)
tests/: __init__.py
(+414 files in other folders)
