[project]
name = "bwr-tools"
version = "0.1.0"
description = "Blockworks Research Plotting Library"
authors = [
    {name = "Daniel", email = "daniel.shapiro@blockworks.co"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pandas>=2.0.0",
    "plotly>=5.10.0",
    "numpy>=1.20.0",
    "requests>=2.32.3,<3.0.0", # Corrected format
    "streamlit-aggrid==0.3.4.post3", # Moved from optional group
]
keywords = ["plotly", "visualization", "charts", "streamlit", "ag-grid", "blockworks", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Streamlit",
]

[tool.poetry]
packages = [{include = "bwr_tools", from = "src"}]

[tool.poetry.urls]
"Homepage" = "https://bwr-tools.streamlit.app/"
"Repository" = "https://github.com/dshap47/bwr-tools"
"Bug Tracker" = "https://github.com/dshap47/bwr-tools/issues"

# Optional dependencies for Streamlit (if not making streamlit a main dep)
[tool.poetry.group.streamlit.dependencies]
streamlit = ">=1.4.1,<2.0.0" # Streamlit itself can remain optional if bwr-tools core is usable without it

# Optional dependency for Excel file support
[tool.poetry.group.excel.dependencies]
openpyxl = ">=3.1.5,<4.0.0"

# Development dependencies
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
termcolor = ">=1.1.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"